<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Spinner
        android:id="@+id/wardSpinner"
        android:layout_width="173dp"
        android:layout_height="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wardTW"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:text="@string/wardLabel"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/wardSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/wardTableLayout"
        android:layout_width="315dp"
        android:layout_height="499dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="137dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wardSpinner">

        <TableRow android:background="@color/lightGrey">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/col1PatList"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/col2PatList"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/col3PatList"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/col4PatList"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/col5PatList"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/col6PatList"
                android:textColor="@android:color/black"
                android:textSize="16dp" />


        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>